--- a/index.html
+++ b/index.html
@@ -63,9 +63,126 @@
                     <span class="infoIcons"><i class="fas fa-info"></i></span>
                     <p class="noteText">Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
-
             </section>
 
+            <!-- HEBERGEMENTS -->
+            <section class="hosting">
+                <div class="hostingCards">
+                    <h1>Hébergements à Marseille</h1>
+
+                    <div class="containerHostingCards">
+
+                        <article>
+                            <div class="card">
+                                <div class="image">
+                                    <img src="/images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                                        alt="Chambre d'Hôtel">
+                                    <div class="texte">
+                                        <h4>Auberge la Cannebière</h4>
+                                        <p>Nuit à partir de <b>25€</b></p>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star grey"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+
+                        <article>
+                            <div class="card">
+                                <div class="image">
+                                    <img src="/images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                                        alt="Chambre d'Hôtel">
+                                    <div class="texte">
+                                        <h4>Hôtel du port</h4>
+                                        <p>Nuit à partir de <b>52€</b></p>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star blue"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+
+                        <article>
+                            <div class="card">
+                                <div class="image">
+                                    <img src="/images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                                        alt="Chambre d'Hôtel">
+                                    <div class="texte">
+                                        <h4>Hôtel Les mouettes</h4>
+                                        <p>Nuit à partir de <b>76€</b></p>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star grey"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+
+                        <article>
+                            <div class="card">
+                                <div class="image">
+                                    <img src="/images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                                        alt="Chambre d'Hôtel">
+                                    <div class="texte">
+                                        <h4>Hôtel de la mer</h4>
+                                        <p>Nuit à partir de <b>46€</b></p>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star grey"></i>
+                                        <i class="fas fa-star grey"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+
+                        <article>
+                            <div class="card">
+                                <div class="image">
+                                    <img src="/images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                                        alt="Chambre d'Hôtel">
+                                    <div class="texte">
+                                        <h4>Hôtel Le Panier</h4>
+                                        <p>Nuit à partir de <b>23€</b></p>
+                                        <i class="fas fa-star blue blue"></i>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star grey"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+
+                        <article>
+                            <div class="card">
+                                <div class="image">
+                                    <img src="/images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                                        alt="Chambre d'Hôtel">
+                                    <div class="texte">
+                                        <h4>Hôtel chez Amina</h4>
+                                        <p>Nuit à partir de <b>96€</b></p>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star blue"></i>
+                                        <i class="fas fa-star blue"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+
+                    <a href="#" class="more">Afficher plus</a>
+                </div>
         </div>
 
     </div>
