--- a/index.html
+++ b/index.html
@@ -73,108 +73,120 @@
                     <div class="containerHostingCards">
 
                         <article>
-                            <div class="card">
-                                <div class="image">
+                            <div class="hostCard">
+                                <div class="hostImage">
                                     <img src="/images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                                         alt="Chambre d'Hôtel">
-                                    <div class="texte">
+                                    <div class="hostText">
                                         <h4>Auberge la Cannebière</h4>
                                         <p>Nuit à partir de <b>25€</b></p>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star grey"></i>
+                                        <div class="stars">
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star grey"></i>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </article>
 
                         <article>
-                            <div class="card">
-                                <div class="image">
+                            <div class="hostCard">
+                                <div class="hostImage">
                                     <img src="/images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                                         alt="Chambre d'Hôtel">
-                                    <div class="texte">
+                                    <div class="hostText">
                                         <h4>Hôtel du port</h4>
                                         <p>Nuit à partir de <b>52€</b></p>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star blue"></i>
+                                        <div class="stars">
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </article>
 
                         <article>
-                            <div class="card">
-                                <div class="image">
+                            <div class="hostCard">
+                                <div class="hostImage">
                                     <img src="/images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg"
                                         alt="Chambre d'Hôtel">
-                                    <div class="texte">
+                                    <div class="hostText">
                                         <h4>Hôtel Les mouettes</h4>
                                         <p>Nuit à partir de <b>76€</b></p>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star grey"></i>
+                                        <div class="stars">
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star grey"></i>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </article>
 
                         <article>
-                            <div class="card">
-                                <div class="image">
+                            <div class="hostCard">
+                                <div class="hostImage">
                                     <img src="/images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                                         alt="Chambre d'Hôtel">
-                                    <div class="texte">
+                                    <div class="hostText">
                                         <h4>Hôtel de la mer</h4>
                                         <p>Nuit à partir de <b>46€</b></p>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star grey"></i>
-                                        <i class="fas fa-star grey"></i>
+                                        <div class="stars">
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star grey"></i>
+                                            <i class="fas fa-star grey"></i>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </article>
 
                         <article>
-                            <div class="card">
-                                <div class="image">
+                            <div class="hostCard">
+                                <div class="hostImage">
                                     <img src="/images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                                         alt="Chambre d'Hôtel">
-                                    <div class="texte">
+                                    <div class="hostText">
                                         <h4>Hôtel Le Panier</h4>
                                         <p>Nuit à partir de <b>23€</b></p>
-                                        <i class="fas fa-star blue blue"></i>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star grey"></i>
+                                        <div class="stars">
+                                            <i class="fas fa-star blue blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star grey"></i>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </article>
 
                         <article>
-                            <div class="card">
-                                <div class="image">
+                            <div class="hostCard">
+                                <div class="hostImage">
                                     <img src="/images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                                         alt="Chambre d'Hôtel">
-                                    <div class="texte">
+                                    <div class="hostText">
                                         <h4>Hôtel chez Amina</h4>
                                         <p>Nuit à partir de <b>96€</b></p>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star blue"></i>
-                                        <i class="fas fa-star blue"></i>
+                                        <div class="stars">
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -182,6 +194,78 @@
                     </div>
 
                     <a href="#" class="more">Afficher plus</a>
+                </div>
+
+                <!-- POPULAIRES -->
+                <div class="popular">
+                    <h1>Les plus populaires <i class="fas fa-chart-line"></i></h1>
+
+                    <div class="popularCards">
+                        <article>
+                            <div class="popularCard">
+                                <div class="popularImage">
+                                    <img src="/images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                                        alt="Chambre d'Hôtel">
+                                    <div class="popularText">
+                                        <h3>Hôtel Le soleil du matin</h3>
+                                        <p>Nuit à partir de <b>128€</b></p>
+                                        <div class="stars">
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="popularCards">
+                        <article>
+                            <div class="popularCard">
+                                <div class="popularImage">
+                                    <img src="/images/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                                        alt="Chambre d'Hôtel">
+                                    <div class="popularText">
+                                        <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                                        <p>Nuit à partir de <b>71€</b></p>
+                                        <div class="stars">
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star grey"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="popularCards">
+                        <article>
+                            <div class="popularCard">
+                                <div class="popularImage">
+                                    <img src="/images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                                        alt="Chambre d'Hôtel">
+                                    <div class="popularText">
+                                        <h3>Hôtel Tout bleu et Blanc</h3>
+                                        <p>Nuit à partir de <b>68€</b></p>
+                                        <div class="stars">
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star blue"></i>
+                                            <i class="fas fa-star grey"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+
                 </div>
         </div>
 
