--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                                 <div class="popularImage">
                                     <img src="/images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                                         alt="Chambre d'Hôtel">
-                                    <div class="popularText">
+                                    <aside class="popularText">
                                         <h3>Hôtel Tout bleu et Blanc</h3>
                                         <p>Nuit à partir de <b>68€</b></p>
                                         <div class="stars">
@@ -260,7 +260,7 @@
                                             <i class="fas fa-star blue"></i>
                                             <i class="fas fa-star grey"></i>
                                         </div>
-                                    </div>
+                                    </aside>
                                 </div>
                             </div>
                         </article>
