--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         </header>
 
-        <div class="containerPage">
+        <div class="container-page">
 
             <section>
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
@@ -47,37 +47,37 @@
                 <!-- FILTRES -->
                 <div class="filters">
                     <h3>Filtres</h3>
-                    <div class="filtersList">
+                    <div class="filters-list">
                         <span><i class="fas fa-money-bill-wave filtersIcon"></i> <span
-                                class="filterTitle">Économique</span></span>
-                        <span><i class="fas fa-child filtersIcon"></i> <span class="filterTitle">Familial</span></span>
+                                class="filter-title">Économique</span></span>
+                        <span><i class="fas fa-child filtersIcon"></i> <span class="filter-title">Familial</span></span>
                         <span><i class="fas fa-heart filtersIcon"></i> <span
-                                class="filterTitle">Romantique</span></span>
-                        <span><i class="fas fa-dog filtersIcon"></i> <span class="filterTitle">Animaux
+                                class="filter-title">Romantique</span></span>
+                        <span><i class="fas fa-dog filtersIcon"></i> <span class="filter-title">Animaux
                                 autorisés</span></span>
                     </div>
                 </div>
 
                 <!-- NOTE -->
                 <div class="note">
-                    <span class="infoIcons"><i class="fas fa-info"></i></span>
-                    <p class="noteText">Plus de 500 logements sont disponibles dans cette ville</p>
+                    <span class="info-icons"><i class="fas fa-info"></i></span>
+                    <p class="note-text">Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
             </section>
 
             <!-- HEBERGEMENTS -->
-            <section class="hosting">
-                <div class="hostingCards">
+            <section class="hosting" id="hébergements">
+                <div class="hosting-cards">
                     <h1>Hébergements à Marseille</h1>
 
-                    <div class="containerHostingCards">
+                    <div class="container-hosting-cards">
 
                         <article>
                             <div class="hostCard">
-                                <div class="hostImage">
+                                <div class="host-image">
                                     <img src="/images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                                        alt="Chambre d'Hôtel">
-                                    <div class="hostText">
+                                        alt="Auberge la Cannebière">
+                                    <div class="host-text">
                                         <h4>Auberge la Cannebière</h4>
                                         <p>Nuit à partir de <b>25€</b></p>
                                         <div class="stars">
@@ -94,10 +94,10 @@
 
                         <article>
                             <div class="hostCard">
-                                <div class="hostImage">
+                                <div class="host-image">
                                     <img src="/images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
-                                        alt="Chambre d'Hôtel">
-                                    <div class="hostText">
+                                        alt="Hôtel du port">
+                                    <div class="host-text">
                                         <h4>Hôtel du port</h4>
                                         <p>Nuit à partir de <b>52€</b></p>
                                         <div class="stars">
@@ -114,10 +114,10 @@
 
                         <article>
                             <div class="hostCard">
-                                <div class="hostImage">
+                                <div class="host-image">
                                     <img src="/images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-                                        alt="Chambre d'Hôtel">
-                                    <div class="hostText">
+                                        alt="Hôtel Les mouettes">
+                                    <div class="host-text">
                                         <h4>Hôtel Les mouettes</h4>
                                         <p>Nuit à partir de <b>76€</b></p>
                                         <div class="stars">
@@ -134,10 +134,10 @@
 
                         <article>
                             <div class="hostCard">
-                                <div class="hostImage">
+                                <div class="host-image">
                                     <img src="/images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-                                        alt="Chambre d'Hôtel">
-                                    <div class="hostText">
+                                        alt="Hôtel de la mer">
+                                    <div class="host-text">
                                         <h4>Hôtel de la mer</h4>
                                         <p>Nuit à partir de <b>46€</b></p>
                                         <div class="stars">
@@ -154,10 +154,10 @@
 
                         <article>
                             <div class="hostCard">
-                                <div class="hostImage">
+                                <div class="host-image">
                                     <img src="/images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
-                                        alt="Chambre d'Hôtel">
-                                    <div class="hostText">
+                                        alt="Hôtel Le Panier">
+                                    <div class="host-text">
                                         <h4>Hôtel Le Panier</h4>
                                         <p>Nuit à partir de <b>23€</b></p>
                                         <div class="stars">
@@ -174,10 +174,10 @@
 
                         <article>
                             <div class="hostCard">
-                                <div class="hostImage">
+                                <div class="host-image">
                                     <img src="/images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-                                        alt="Chambre d'Hôtel">
-                                    <div class="hostText">
+                                        alt="Hôtel chez Amina">
+                                    <div class="host-text">
                                         <h4>Hôtel chez Amina</h4>
                                         <p>Nuit à partir de <b>96€</b></p>
                                         <div class="stars">
@@ -200,13 +200,13 @@
                 <div class="popular">
                     <h1>Les plus populaires <i class="fas fa-chart-line"></i></h1>
 
-                    <div class="popularCards">
+                    <div class="popular-cards">
                         <article>
-                            <div class="popularCard">
-                                <div class="popularImage">
+                            <div class="popular-card">
+                                <div class="popular-image">
                                     <img src="/images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                                        alt="Chambre d'Hôtel">
-                                    <div class="popularText">
+                                        alt="Hôtel Le soleil du matin">
+                                    <div class="popular-text">
                                         <h3>Hôtel Le soleil du matin</h3>
                                         <p>Nuit à partir de <b>128€</b></p>
                                         <div class="stars">
@@ -222,13 +222,13 @@
                         </article>
                     </div>
 
-                    <div class="popularCards">
+                    <div class="popular-cards">
                         <article>
-                            <div class="popularCard">
-                                <div class="popularImage">
+                            <div class="popular-card">
+                                <div class="popular-image">
                                     <img src="/images/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg"
-                                        alt="Chambre d'Hôtel">
-                                    <div class="popularText">
+                                        alt="Au coeur de l'eau Chambres d'hôtes">
+                                    <div class="popular-text">
                                         <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                                         <p>Nuit à partir de <b>71€</b></p>
                                         <div class="stars">
@@ -244,13 +244,13 @@
                         </article>
                     </div>
 
-                    <div class="popularCards">
+                    <div class="popular-cards">
                         <article>
-                            <div class="popularCard">
-                                <div class="popularImage">
+                            <div class="popular-card">
+                                <div class="popular-image">
                                     <img src="/images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-                                        alt="Chambre d'Hôtel">
-                                    <aside class="popularText">
+                                        alt="Hôtel Tout bleu et Blanc">
+                                    <div class="popular-text">
                                         <h3>Hôtel Tout bleu et Blanc</h3>
                                         <p>Nuit à partir de <b>68€</b></p>
                                         <div class="stars">
@@ -260,16 +260,116 @@
                                             <i class="fas fa-star blue"></i>
                                             <i class="fas fa-star grey"></i>
                                         </div>
-                                    </aside>
+                                    </div>
                                 </div>
                             </div>
                         </article>
                     </div>
 
                 </div>
-        </div>
+            </section>
 
+            <!-- ACTIVITES -->
+            <section class="activity" id="activités">
+                <div class="activity-cards">
+                    <h1>Activités à Marseille</h1>
+
+                    <div class="container-activity-cards">
+                        <article>
+                            <div class="activity-image">
+                                <img src="/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                                    alt="Vieux Port">
+                            </div>
+                            <h4>Vieux Port</h4>
+                        </article>
+
+                        <div class="container-double">
+                            <article>
+                                <div class="activity-image-moy">
+                                    <img class="large"
+                                        src="/images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                                        alt="Fort de Pomègues">
+                                </div>
+
+                                <h4>Fort de Pomègues</h4>
+                            </article>
+
+                            <article>
+                                <div class="activity-image-moy">
+                                    <img class="small"
+                                        src="/images/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                                        alt="Îles du Frioul">
+                                </div>
+
+                                <h4>Îles du Frioul</h4>
+                            </article>
+                        </div>
+
+                        <article>
+                            <div class="activity-image">
+                                <img src="/images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                                    alt="Parc National des Calanques">
+                            </div>
+
+                            <h4>Parc National des Calanques</h4>
+                        </article>
+
+                        <div class="container-double container-double">
+                            <article>
+                                <div class="activity-image-moy">
+                                    <img class="normal"
+                                        src="/images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                                        alt="Notre Dame de la Garde">
+                                </div>
+
+                                <h4>Notre-Dame-de-la-Garde</h4>
+                            </article>
+
+                            <article>
+                                <div class="activity-image-moy">
+                                    <img class="normal"
+                                        src="/images/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                                        alt="Parc Longchamp">
+                                </div>
+                                <h4>Parc Longchamp</h4>
+                            </article>
+                        </div>
+
+                    </div>
+                </div>
+            </section>
+        </div>
     </div>
+
+    <!-- FOOTER -->
+    <footer>
+        <div class="footer">
+            <div class="about">
+                <h3>À propos</h3>
+                <ul>
+                    <li><a href="#">Fonctionnement du site</a></li>
+                    <li><a href="#">Conditions générales de vente</a></li>
+                    <li><a href="#">Données et confidentialité</a></li>
+                </ul>
+            </div>
+
+            <div class="hosts">
+                <h3>Nos hébergements</h3>
+                <ul>
+                    <li><a href="#">Charte qualité</a></li>
+                    <li><a href="#">Soumettre votre hôtel</a></li>
+                </ul>
+            </div>
+
+            <div class="help">
+                <h3>Assistance</h3>
+                <ul>
+                    <li><a href="#">Centre d'aide</a></li>
+                    <li><a href="#">Nous contacter</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
