--- a/index.html
+++ b/index.html
@@ -230,10 +230,12 @@
                         <article>
                             <div class="popular-card">
                                 <div class="popular-image">
-                                    <source media="(max-width: 992px)"
-                                        srcset="/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
-                                    <source media="(min-width: 768px)"
-                                        srcset="/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                                    <div>
+                                        <source media="(max-width: 992px)"
+                                            srcset="/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                                        <source media="(min-width: 768px)"
+                                            srcset="/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                                    </div>
                                     <img src="/images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                                         alt="Hôtel Le soleil du matin">
                                     <div class="popular-text">
