--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Trouvez votre hébergement pour des vacances de rêve">
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -230,12 +230,10 @@
                         <article>
                             <div class="popular-card">
                                 <div class="popular-image">
-                                    <div>
-                                        <source media="(max-width: 992px)"
-                                            srcset="/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
-                                        <source media="(min-width: 768px)"
-                                            srcset="/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
-                                    </div>
+                                    <source media="(max-width: 992px)"
+                                        srcset="/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                                    <source media="(min-width: 768px)"
+                                        srcset="/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
                                     <img src="/images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                                         alt="Hôtel Le soleil du matin">
                                     <div class="popular-text">
