--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                         <article>
                             <div class="hostCard">
-                                <div class="host-image">
+                                <picture class="host-image">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -94,13 +94,13 @@
                                             <i class="fas fa-star grey"></i>
                                         </div>
                                     </div>
-                                </div>
+                                </picture>
                             </div>
                         </article>
 
                         <article>
                             <div class="hostCard">
-                                <div class="host-image">
+                                <picture class="host-image">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -118,13 +118,13 @@
                                             <i class="fas fa-star blue"></i>
                                         </div>
                                     </div>
-                                </div>
+                                </picture>
                             </div>
                         </article>
 
                         <article>
                             <div class="hostCard">
-                                <div class="host-image">
+                                <picture class="host-image">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -142,13 +142,13 @@
                                             <i class="fas fa-star grey"></i>
                                         </div>
                                     </div>
-                                </div>
+                                </picture>
                             </div>
                         </article>
 
                         <article>
                             <div class="hostCard">
-                                <div class="host-image">
+                                <picture class="host-image">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -166,13 +166,13 @@
                                             <i class="fas fa-star grey"></i>
                                         </div>
                                     </div>
-                                </div>
+                                </picture>
                             </div>
                         </article>
 
                         <article>
                             <div class="hostCard">
-                                <div class="host-image">
+                                <picture class="host-image">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -190,13 +190,13 @@
                                             <i class="fas fa-star grey"></i>
                                         </div>
                                     </div>
-                                </div>
+                                </picture>
                             </div>
                         </article>
 
                         <article>
                             <div class="hostCard">
-                                <div class="host-image">
+                                <picture class="host-image">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -214,7 +214,7 @@
                                             <i class="fas fa-star blue"></i>
                                         </div>
                                     </div>
-                                </div>
+                                </picture>
                             </div>
                         </article>
                     </div>
@@ -229,7 +229,7 @@
                     <div class="popular-cards">
                         <article>
                             <div class="popular-card">
-                                <div class="popular-image">
+                                <picture class="popular-image">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -247,7 +247,7 @@
                                             <i class="fas fa-star blue"></i>
                                         </div>
                                     </div>
-                                </div>
+                                </picture>
                             </div>
                         </article>
                     </div>
@@ -255,7 +255,7 @@
                     <div class="popular-cards">
                         <article>
                             <div class="popular-card">
-                                <div class="popular-image">
+                                <picture class="popular-image">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -273,7 +273,7 @@
                                             <i class="fas fa-star grey"></i>
                                         </div>
                                     </div>
-                                </div>
+                                </picture>
                             </div>
                         </article>
                     </div>
@@ -281,7 +281,7 @@
                     <div class="popular-cards">
                         <article>
                             <div class="popular-card">
-                                <div class="popular-image">
+                                <picture class="popular-image">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -299,7 +299,7 @@
                                             <i class="fas fa-star grey"></i>
                                         </div>
                                     </div>
-                                </div>
+                                </picture>
                             </div>
                         </article>
                     </div>
@@ -314,20 +314,20 @@
 
                     <div class="container-activity-cards">
                         <article>
-                            <div class="activity-image">
+                            <picture class="activity-image">
                                 <source media="(max-width: 992px)"
                                     srcset="/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
                                 <source media="(min-width: 768px)"
                                     srcset="/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
                                 <img src="/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                                     alt="Vieux Port">
-                            </div>
+                            </picture>
                             <h4>Vieux Port</h4>
                         </article>
 
                         <div class="container-double">
                             <article>
-                                <div class="activity-image-moy">
+                                <picture class="activity-image-moy">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -335,13 +335,13 @@
                                     <img class="large"
                                         src="/images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
                                         alt="Fort de Pomègues">
-                                </div>
+                                </picture>
 
                                 <h4>Fort de Pomègues</h4>
                             </article>
 
                             <article>
-                                <div class="activity-image-moy">
+                                <picture class="activity-image-moy">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -349,28 +349,28 @@
                                     <img class="small"
                                         src="/images/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
                                         alt="Îles du Frioul">
-                                </div>
+                                </picture>
 
                                 <h4>Îles du Frioul</h4>
                             </article>
                         </div>
 
                         <article>
-                            <div class="activity-image">
+                            <picture class="activity-image">
                                 <source media="(max-width: 992px)"
                                     srcset="/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
                                 <source media="(min-width: 768px)"
                                     srcset="/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
                                 <img src="/images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                                     alt="Parc National des Calanques">
-                            </div>
+                            </picture>
 
                             <h4>Parc National des Calanques</h4>
                         </article>
 
                         <div class="container-double">
                             <article>
-                                <div class="activity-image-moy">
+                                <picture class="activity-image-moy">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -378,13 +378,13 @@
                                     <img class="normal"
                                         src="/images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg"
                                         alt="Notre Dame de la Garde">
-                                </div>
+                                </picture>
 
                                 <h4>Notre-Dame-de-la-Garde</h4>
                             </article>
 
                             <article>
-                                <div class="activity-image-moy">
+                                <picture class="activity-image-moy">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -392,7 +392,7 @@
                                     <img class="normal"
                                         src="/images/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                                         alt="Parc Longchamp">
-                                </div>
+                                </picture>
                                 <h4>Parc Longchamp</h4>
                             </article>
                         </div>
