--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                         srcset="/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
                                     <img src="/images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                                         alt="Auberge la Cannebière">
-                                    <div class="host-text">
+                                    <figcaption class="host-text">
                                         <h4>Auberge la Cannebière</h4>
                                         <p>Nuit à partir de <b>25€</b></p>
                                         <div class="stars">
@@ -93,7 +93,7 @@
                                             <i class="fas fa-star blue"></i>
                                             <i class="fas fa-star grey"></i>
                                         </div>
-                                    </div>
+                                    </figcaption>
                                 </picture>
                             </div>
                         </article>
@@ -107,7 +107,7 @@
                                         srcset="/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
                                     <img src="/images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                                         alt="Hôtel du port">
-                                    <div class="host-text">
+                                    <figcaption class="host-text">
                                         <h4>Hôtel du port</h4>
                                         <p>Nuit à partir de <b>52€</b></p>
                                         <div class="stars">
@@ -117,7 +117,7 @@
                                             <i class="fas fa-star blue"></i>
                                             <i class="fas fa-star blue"></i>
                                         </div>
-                                    </div>
+                                    </figcaption>
                                 </picture>
                             </div>
                         </article>
@@ -131,7 +131,7 @@
                                         srcset="/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
                                     <img src="/images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg"
                                         alt="Hôtel Les mouettes">
-                                    <div class="host-text">
+                                    <figcaption class="host-text">
                                         <h4>Hôtel Les mouettes</h4>
                                         <p>Nuit à partir de <b>76€</b></p>
                                         <div class="stars">
@@ -141,7 +141,7 @@
                                             <i class="fas fa-star blue"></i>
                                             <i class="fas fa-star grey"></i>
                                         </div>
-                                    </div>
+                                    </figcaption>
                                 </picture>
                             </div>
                         </article>
@@ -155,7 +155,7 @@
                                         srcset="/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
                                     <img src="/images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                                         alt="Hôtel de la mer">
-                                    <div class="host-text">
+                                    <figcaption class="host-text">
                                         <h4>Hôtel de la mer</h4>
                                         <p>Nuit à partir de <b>46€</b></p>
                                         <div class="stars">
@@ -165,7 +165,7 @@
                                             <i class="fas fa-star grey"></i>
                                             <i class="fas fa-star grey"></i>
                                         </div>
-                                    </div>
+                                    </figcaption>
                                 </picture>
                             </div>
                         </article>
@@ -179,7 +179,7 @@
                                         srcset="/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
                                     <img src="/images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                                         alt="Hôtel Le Panier">
-                                    <div class="host-text">
+                                    <figcaption class="host-text">
                                         <h4>Hôtel Le Panier</h4>
                                         <p>Nuit à partir de <b>23€</b></p>
                                         <div class="stars">
@@ -189,7 +189,7 @@
                                             <i class="fas fa-star blue"></i>
                                             <i class="fas fa-star grey"></i>
                                         </div>
-                                    </div>
+                                    </figcaption>
                                 </picture>
                             </div>
                         </article>
@@ -203,7 +203,7 @@
                                         srcset="/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
                                     <img src="/images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                                         alt="Hôtel chez Amina">
-                                    <div class="host-text">
+                                    <figcaption class="host-text">
                                         <h4>Hôtel chez Amina</h4>
                                         <p>Nuit à partir de <b>96€</b></p>
                                         <div class="stars">
@@ -213,7 +213,7 @@
                                             <i class="fas fa-star blue"></i>
                                             <i class="fas fa-star blue"></i>
                                         </div>
-                                    </div>
+                                    </figcaption>
                                 </picture>
                             </div>
                         </article>
@@ -236,7 +236,7 @@
                                         srcset="/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
                                     <img src="/images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                                         alt="Hôtel Le soleil du matin">
-                                    <div class="popular-text">
+                                    <figcaption class="popular-text">
                                         <h3>Hôtel Le soleil du matin</h3>
                                         <p>Nuit à partir de <b>128€</b></p>
                                         <div class="stars">
@@ -246,7 +246,7 @@
                                             <i class="fas fa-star blue"></i>
                                             <i class="fas fa-star blue"></i>
                                         </div>
-                                    </div>
+                                    </figcaption>
                                 </picture>
                             </div>
                         </article>
@@ -262,7 +262,7 @@
                                         srcset="/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg">
                                     <img src="/images/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg"
                                         alt="Au coeur de l'eau Chambres d'hôtes">
-                                    <div class="popular-text">
+                                    <figcaption class="popular-text">
                                         <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                                         <p>Nuit à partir de <b>71€</b></p>
                                         <div class="stars">
@@ -272,7 +272,7 @@
                                             <i class="fas fa-star blue"></i>
                                             <i class="fas fa-star grey"></i>
                                         </div>
-                                    </div>
+                                    </figcaption>
                                 </picture>
                             </div>
                         </article>
@@ -288,7 +288,7 @@
                                         srcset="/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
                                     <img src="/images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                                         alt="Hôtel Tout bleu et Blanc">
-                                    <div class="popular-text">
+                                    <figcaption class="popular-text">
                                         <h3>Hôtel Tout bleu et Blanc</h3>
                                         <p>Nuit à partir de <b>68€</b></p>
                                         <div class="stars">
@@ -298,7 +298,7 @@
                                             <i class="fas fa-star blue"></i>
                                             <i class="fas fa-star grey"></i>
                                         </div>
-                                    </div>
+                                    </figcaption>
                                 </picture>
                             </div>
                         </article>
