--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                         <article>
                             <div class="hostCard">
-                                <picture class="host-image">
+                                <figure class="host-image">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -94,13 +94,13 @@
                                             <i class="fas fa-star grey"></i>
                                         </div>
                                     </figcaption>
-                                </picture>
+                                </figure>
                             </div>
                         </article>
 
                         <article>
                             <div class="hostCard">
-                                <picture class="host-image">
+                                <figure class="host-image">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -118,13 +118,13 @@
                                             <i class="fas fa-star blue"></i>
                                         </div>
                                     </figcaption>
-                                </picture>
+                                </figure>
                             </div>
                         </article>
 
                         <article>
                             <div class="hostCard">
-                                <picture class="host-image">
+                                <figure class="host-image">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -142,13 +142,13 @@
                                             <i class="fas fa-star grey"></i>
                                         </div>
                                     </figcaption>
-                                </picture>
+                                </figure>
                             </div>
                         </article>
 
                         <article>
                             <div class="hostCard">
-                                <picture class="host-image">
+                                <figure class="host-image">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -166,13 +166,13 @@
                                             <i class="fas fa-star grey"></i>
                                         </div>
                                     </figcaption>
-                                </picture>
+                                </figure>
                             </div>
                         </article>
 
                         <article>
                             <div class="hostCard">
-                                <picture class="host-image">
+                                <figure class="host-image">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -190,13 +190,13 @@
                                             <i class="fas fa-star grey"></i>
                                         </div>
                                     </figcaption>
-                                </picture>
+                                </figure>
                             </div>
                         </article>
 
                         <article>
                             <div class="hostCard">
-                                <picture class="host-image">
+                                <figure class="host-image">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -214,7 +214,7 @@
                                             <i class="fas fa-star blue"></i>
                                         </div>
                                     </figcaption>
-                                </picture>
+                                </figure>
                             </div>
                         </article>
                     </div>
@@ -229,7 +229,7 @@
                     <div class="popular-cards">
                         <article>
                             <div class="popular-card">
-                                <picture class="popular-image">
+                                <figure class="popular-image">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -247,7 +247,7 @@
                                             <i class="fas fa-star blue"></i>
                                         </div>
                                     </figcaption>
-                                </picture>
+                                </figure>
                             </div>
                         </article>
                     </div>
@@ -255,7 +255,7 @@
                     <div class="popular-cards">
                         <article>
                             <div class="popular-card">
-                                <picture class="popular-image">
+                                <figure class="popular-image">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -273,7 +273,7 @@
                                             <i class="fas fa-star grey"></i>
                                         </div>
                                     </figcaption>
-                                </picture>
+                                </figure>
                             </div>
                         </article>
                     </div>
@@ -281,7 +281,7 @@
                     <div class="popular-cards">
                         <article>
                             <div class="popular-card">
-                                <picture class="popular-image">
+                                <figure class="popular-image">
                                     <source media="(max-width: 992px)"
                                         srcset="/images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
                                     <source media="(min-width: 768px)"
@@ -299,7 +299,7 @@
                                             <i class="fas fa-star grey"></i>
                                         </div>
                                     </figcaption>
-                                </picture>
+                                </figure>
                             </div>
                         </article>
                     </div>
@@ -322,6 +322,7 @@
                                 <img src="/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                                     alt="Vieux Port">
                             </picture>
+
                             <h4>Vieux Port</h4>
                         </article>
 
@@ -393,6 +394,7 @@
                                         src="/images/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                                         alt="Parc Longchamp">
                                 </picture>
+
                                 <h4>Parc Longchamp</h4>
                             </article>
                         </div>
