--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                             <h4>Parc National des Calanques</h4>
                         </article>
 
-                        <div class="container-double">
+                        <div class="container-double tablet">
                             <article>
                                 <div class="activity-image-moy">
                                     <img class="normal"
