--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 
         <!-- HEADER -->
         <header>
-            <div class="logo">
-                <img src="/images/logo/Booki.png" alt="logo booki">
-            </div>
+            <picture class="logo">
+                <source media="(max-width: 768px)" srcset="/images/logo/Booki@3x.png">
+                <img src="/images/logo/Booki.png" alt="Logo Booki">
+            </picture>
 
             <!-- NAVIGATION -->
             <nav>
